# qfil

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: python-quality.yml
src/qfil/: __init__.py  __main__.py  logging.py  progress.py
src/qfil/images/: __init__.py  sparse.py
src/qfil/protocol/: __init__.py  firehose.py  sahara.py
src/qfil/software_fix/: __init__.py  discovery.py  rescue_cmd.py
src/qfil/tools/: __init__.py  fh_loader.py  qfil.py  qsahara_server.py
src/qfil/usb/: __init__.py  transport.py
tests/: test_firehose.py  test_sahara.py
